fix overflow issue

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -17,7 +17,6 @@ body {
   font-size: var(--base-font-size);
   background: var(--primary-color);
   color: #ffffff;
-  overflow-x: hidden;
 }
 
 header {
@@ -28,6 +27,7 @@ main {
     padding: 20px;
     max-width: 1366px;
     margin: 0 auto;
+    position: relative;
 }
 
 .logo-wrap {
